// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberExpression tags will apply modifiers 1`] = `
  () => <Foo.Bar className="Bar_6b5" />;
  css(\`
  	.Bar_6b5 {
  		color: red;
  	}
  \`);
`;

exports[`MemberExpression tags will passthru 1`] = `  () => <Foo.Bar />;`;

exports[`children fragment 1`] = `
  () => (
    <>
      <div>Foo</div>
      <div>Bar</div>
    </>
  );
`;

exports[`children multiple 1`] = `
  () => (
    <div>
      <div>Foo</div>
      <div>Bar</div>
    </div>
  );
`;

exports[`implicit return arrow function 1`] = `  () => <div>Hello World</div>;`;

exports[`implicit return function declaration 1`] = `
  function App() {
    return <div>Hello World</div>;
  }
`;

exports[`implicit return function expression 1`] = `
  const App = function () {
    return <div>Hello World</div>;
  };
`;

exports[`implicit return with statements 1`] = `
  () => {
    const [x, setX] = useState();
    useEffect(() => {
      void x;
      setX();
    }, []);
  
    return <div />;
  };
`;
